[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "case-log-extract"
version = "0.1.3"
description = ""
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
PySide6 = "^6.2.2"
pandas = "^1.3.5"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"

[tool.poe.tasks]
dev = "python src/app.py"
jupy = "jupyter-lab dev/"
clean = "rm -rf build"
